--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -18,7 +18,7 @@
     <title th:replace="${title}">Application title</title>
 </head>
 <body>
-<!--/* Main navbar */-->
+<!-- Main navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/">Chess v1.0</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
